# taking-turns

./: Cargo.toml  Dioxus.toml  deny.toml  flake.nix
.github/workflows/: main.yml
nix/: checks.nix
src/: lib.rs  main.rs
src/business/: affectations.rs  date_range.rs  day_filter.rs  excluded_period_filter.rs  mod.rs  name.rs  weekday_filter.rs
src/gui/: affectations_widget.rs  app.rs  date_range_widget.rs  excluded_periods.rs  mod.rs  names_widget.rs  weekday_filter_widget.rs
