[package]
name = "taking-turns"
version = "0.1.0"
authors = ["FaustXVI <1016863+FaustXVI@users.noreply.github.com>"]
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
chrono = { version = "0.4.42" }
wasm-bindgen = "=0.2.100"
thiserror = { version = "2.0.16" }
derive_more = { version = "2.0.1", features = ["display"] }

[dev-dependencies]
rstest = { version = "0.26.1" }
googletest = { version = "0.14.2" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
